# covid19_live

./: README.md  covid19_live_data.py  pyproject.toml  server.py
templates/: covid19-live.html  index.html  main.css
