[tool.poetry]
name = "covid-live"
version = "0.1.0"
description = ""
authors = ["ssungs <asdf4651@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
requests = "^2.25.1"
selenium = "^3.141.0"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
